[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/boss-2_03.png" type="Texture" id=1]
[ext_resource path="res://CoringaVirusBoss.gd" type="Script" id=2]
[ext_resource path="res://assets/Sons/Miasma/MiasmaLoop.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/Sons/Miasma/MiasmaDano.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/Sons/Miasma/MiasmaSepara.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 112, 112 )

[node name="CoringaVirusBoss1" type="KinematicBody2D"]
scale = Vector2( 2.84, 2.84 )
collision_layer = 16
collision_mask = 128
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.90735e-06, 2.14577e-06 )
scale = Vector2( 0.260563, 0.260563 )
texture = ExtResource( 1 )

[node name="Randomiser" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="DanoSom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="LoopSom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="SeparaSom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="TimerSom" type="Timer" parent="."]
[connection signal="timeout" from="Randomiser" to="." method="_on_Randomiser_timeout"]
[connection signal="timeout" from="TimerSom" to="." method="_on_TimerSom_timeout"]
